# bumperbot-ros2-core

./: .gitignore  README.md
bumperbot_bringup/: CMakeLists.txt  package.xml
bumperbot_bringup/launch/: simulated_robot.launch.py
bumperbot_controller/: package.xml
bumperbot_controller/config/: bumperbot_controllers.yaml  joy_teleop.yaml
bumperbot_controller/launch/: joint_state_broadcaster.launch.py
bumperbot_description/: CMakeLists.txt  package.xml
bumperbot_description/launch/: robot_state_publisher.launch.py
bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro  bumperbot_ros2_control.xacro
bumperbot_firmware/: CMakeLists.txt  diff_drive_interface.xml  package.xml
bumperbot_firmware/arduino/diff_drive_controller/: diff_drive_controller.ino  l298n_motor.hpp  quadrature_encoder.hpp  wheel_controller.cpp  wheel_controller.hpp
bumperbot_firmware/arduino/diff_drive_controller/protocol/: diff_drive_deserialize.hpp  diff_drive_message_traits.hpp
bumperbot_firmware/arduino/esp32_controller/: platformio.ini
bumperbot_firmware/arduino/esp32_controller/include/: quadrature_encoder.hpp  serial_message_processor.hpp  task_shared_data.hpp  wheel_controller.hpp
bumperbot_firmware/arduino/esp32_controller/include/protocol/: diff_drive_data.hpp  diff_drive_deserialize.hpp  diff_drive_message_traits.hpp  diff_drive_messages.hpp  diff_drive_serialize.hpp
bumperbot_firmware/arduino/esp32_controller/src/: diff_drive_control_task.cpp  main.cpp  serial_message_processor.cpp  serial_process_task.cpp  wheel_controller.cpp
bumperbot_firmware/bumperbot_firmware/diff_drive/: diff_drive_messages.py  serial_transceiver_node.py  velocity_cmd_test_runner_node.py
bumperbot_firmware/bumperbot_firmware/imu/: mpu6050_driver.py  mpu6050_node.py
bumperbot_firmware/config/test/: pid_test_scenario.yaml
bumperbot_firmware/include/bumperbot_firmware/diff_drive/: binary_message_protocol.hpp  diff_drive_interface.hpp  diff_drive_serial_transceiver.hpp  protocol_codec_concept.hpp
bumperbot_firmware/launch/: controller_manager.launch.py  imu.launch.py
bumperbot_firmware/src/diff_drive/: binary_message_protocol.cpp  diff_drive_interface.cpp
bumperbot_localization/: CMakeLists.txt  package.xml
bumperbot_localization/launch/: local_localization.launch.py
bumperbot_motion/: CMakeLists.txt  motion_control_plugins.xml  package.xml
bumperbot_motion/config/: motion_control.yaml
bumperbot_motion/include/bumperbot_motion/: motion_control_server.hpp
bumperbot_motion/include/bumperbot_motion/core/: motion_control_core_concept.hpp  pd_pure_pursuit_core.hpp
bumperbot_motion/include/bumperbot_motion/plugin/: motion_control_plugin.hpp  pd_pure_pursuit_plugin.hpp
bumperbot_motion/src/: motion_control_app.cpp
bumperbot_motion/src/core/: pd_pure_pursuit_core.cpp
bumperbot_motion/src/plugin/: pd_motion_planner_plugin.cpp
bumperbot_msgs/: CMakeLists.txt  package.xml
bumperbot_msgs/msg/: TwoWheelsAngularVelocity.msg
bumperbot_tools/: package.xml
bumperbot_tools/launch/: display.launch.py  gazebo.launch.py
src/bumperbot_bringup/: CMakeLists.txt  package.xml
src/bumperbot_bringup/launch/: real_robot.launch.py
src/bumperbot_bringup/scripts/: run_env_setup.sh
src/bumperbot_bringup/systemd/: bumperbot.target  bumperbot_controller.service  bumperbot_localization.service  bumperbot_motion.service  controller_manager.service  imu.service  joint_state_broadcaster.service  robot_state_publisher.service
src/bumperbot_controller/: CMakeLists.txt  package.xml
src/bumperbot_controller/bumperbot_controller/: simple_controller.py
src/bumperbot_controller/config/: bumperbot_controllers.yaml  joy_config.yaml  joy_teleop.yaml
src/bumperbot_controller/launch/: controllers.launch.py  diff_drive_controller.launch.py  joystick_teleop.launch.py
src/bumperbot_controller/src/: simple_controller.cpp
src/bumperbot_description/: package.xml
src/bumperbot_description/launch/: display.launch.py  gazebo.launch.py  robot_state_publisher.launch.py
src/bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro
src/bumperbot_firmware/: CMakeLists.txt  find_libserial.cmake  package.xml
src/bumperbot_firmware/arduino/diff_drive_controller/: diff_drive_controller.ino  input_message_parser.hpp
src/bumperbot_firmware/arduino/diff_drive_controller/protocol/: diff_drive_data.hpp  diff_drive_messages.hpp
src/bumperbot_firmware/config/test/: serial_transceiver.yaml
src/bumperbot_firmware/include/bumperbot_firmware/diff_drive/: binary_message_protocol.hpp
src/bumperbot_firmware/launch/: serial_transceiver.launch.py  test_runner.launch.py
src/bumperbot_firmware/src/diff_drive/: diff_drive_interface.cpp
src/bumperbot_localization/: package.xml
src/bumperbot_localization/config/: ekf.yaml
src/bumperbot_motion/: CMakeLists.txt  package.xml
src/bumperbot_motion/config/: motion_control.yaml
src/bumperbot_motion/launch/: motion_server.launch.py
src/bumperbot_motion/src/: motion_control_server.cpp
src/bumperbot_motion/src/plugin/: pd_pure_pursuit_plugin.cpp
src/bumperbot_tools/: CMakeLists.txt  package.xml
src/bumperbot_tools/rviz/: display.rviz
